# ACAI-Enhanced-3D-Pose-Representation

./: README.md  pyproject.toml
experiments/: basic.yaml  h36Test.yaml  h36m_0_ACAIfull_visu.yaml  h36m_128_acai_interp_visu.yaml  h36m_128_ae_interp_visu.yaml  h36m_256_acai_interp_visu.yaml  h36m_256_ae_interp_visu.yaml  h36m_AE_train.yaml  h36m_acai1.yaml  h36m_ae_interp_visu.yaml  h36m_first_ae_full.yaml
output/acai_full/visu/acai_0_latent32_fc1024_30ep_H36M_full_interp_visu/: h36m_acai_interp_visu.yaml  proc_ae_interp_visu.py
src/: main.py  run_h36m.py  smoothness_plot_final.py  trying.py  visu_loss.py
src/deep_cvlab/: __init__.py
src/deep_cvlab/core/: __init__.py  trainer.py
src/deep_cvlab/datasets/: __init__.py  dataloaders_custom.py  datasets_common.py  h36m.py  h36m_3d.py  h36m_original.py  h36m_visual_utils.py  mpii.py
src/deep_cvlab/functional/: __init__.py  generate_heatmaps.py  generate_heatmaps_numpy.py  image_augmentations.py  image_augmentations_3d.py  interpolation.py  interpolation_s.py  rotation.py  sampling.py  softargmax.py
src/deep_cvlab/losses/: __init__.py  acai_loss.py  joints_loss.py  losses_common.py
src/deep_cvlab/metrics/: utils.py
src/deep_cvlab/metrics/coverage/: coverage.py  main.py
src/deep_cvlab/models/: __init__.py  acai.py  autoencoder.py  dummy_network.py
src/deep_cvlab/optimizers/: __init__.py
src/deep_cvlab/procedures/: __init__.py  procedures_common.py
src/deep_cvlab/utils/: __init__.py  h36m_visual_utils.py  interpolation_visu.py  metrics.py  utils.py  visu_utils.py
(+10 files in other folders)
