[tool.poetry]
name = "stud_proj_pose_interp-master"
version = "0.1.0"
description = ""
authors = ["Vincent Naayem"]

[tool.poetry.dependencies]
python = "3.9"
torch = "^1.9.1"
easydict = "^1.9"
matplotlib = "^3.4.3"
PyYAML = "^6.0"
torchvision = "^0.10.1"
jupyter = "^1.0.0"
notebook = "^6.4.4"
opencv-python = "^4.5.4"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
